syntax = "proto3";

package file;

option go_package = "../proto";

service FileService {
  rpc SaveFile (SaveFileRequest) returns (BasicResponse);
  rpc GetFile (GetFileRequest) returns (stream GetFileResponse);
  rpc DeleteFile (DeleteFileRequest) returns (BasicResponse);
  rpc GetAllFiles (GetAllFilesRequest) returns (GetAllFilesResponse);
}

// Общий ответ для операций, которые не возвращают специфичные данные
message BasicResponse {
}

// Запрос на сохранение файла
message SaveFileRequest {
  string jwt = 1;
  string name_file = 2;
  bytes file_data = 3;
}

// Запрос на получение файла
message GetFileRequest {
  string jwt = 1;
  string file_id = 2;
}

// Ответ на запрос получения файла
message GetFileResponse {
  bytes file_data = 1;
  string name_file = 2;
}

// Запрос на удаление файла
message DeleteFileRequest {
  string jwt = 1;
  string file_id = 2;
}

// Запрос на получение всех файлов пользователя
message GetAllFilesRequest {
  string jwt = 1;
}

// Ответ на запрос всех файлов
message GetAllFilesResponse {
  repeated FileInfo files = 1;
}

// Информация о файле в ответе GetAllFilesResponse
message FileInfo {
  string file_id = 1;
  string name_file = 2;
}
